// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Trending component Renders as expected Renders a component with a navigate back wrapper 1`] = `
<div
  data-testid="trending-movies"
>
  <h1>
    Trending Movies
  </h1>
  <div
    style="display: flex; flex-wrap: wrap; justify-content: space-between; overflow: hidden;"
  >
    <ul
      class="MuiGridList-root-6"
      data-testid="asset-grid"
      style="margin: -2px; flex-wrap: nowrap; transform: translateZ(0); padding-top: 3px; padding-bottom: 3px;"
    >
      <div
        class="MuiGridListTile-root-46 pointer-hover image-tile"
        data-testid="0_movieItem"
        style="padding: 5px; height: 225px; width: 150px;"
      >
        <div
          class="MuiGridListTile-tile-47"
        >
          <img
            alt="movieItem"
            src="http://image.tmdb.org/t/p/w300/undefined"
          />
          <div
            class="MuiGridListTileBar-root-50 MuiGridListTileBar-titlePositionBottom-51"
          >
            <div
              class="MuiGridListTileBar-titleWrap-54"
            >
              <div
                class="MuiGridListTileBar-title-57"
              >
                movieItem
              </div>
            </div>
          </div>
        </div>
      </div>
    </ul>
  </div>
</div>
`;

exports[`Trending component Renders as expected Renders a component with a navigate back wrapper 2`] = `
<div
  data-testid="trending-tv"
>
  <h1>
    Trending TV
  </h1>
  <div
    style="display: flex; flex-wrap: wrap; justify-content: space-between; overflow: hidden;"
  >
    <ul
      class="MuiGridList-root-6"
      data-testid="asset-grid"
      style="margin: -2px; flex-wrap: nowrap; transform: translateZ(0); padding-top: 3px; padding-bottom: 3px;"
    >
      <div
        class="MuiGridListTile-root-46 pointer-hover image-tile"
        data-testid="1_tvItem"
        style="padding: 5px; height: 225px; width: 150px;"
      >
        <div
          class="MuiGridListTile-tile-47"
        >
          <img
            alt="tvItem"
            src="http://image.tmdb.org/t/p/w300/undefined"
          />
          <div
            class="MuiGridListTileBar-root-50 MuiGridListTileBar-titlePositionBottom-51"
          >
            <div
              class="MuiGridListTileBar-titleWrap-54"
            >
              <div
                class="MuiGridListTileBar-title-57"
              >
                tvItem
              </div>
            </div>
          </div>
        </div>
      </div>
    </ul>
  </div>
</div>
`;

exports[`Trending component Renders as expected Renders a component with a navigate back wrapper 3`] = `
<div
  data-testid="trending-people"
>
  <h1>
    Trending People
  </h1>
  <ul
    class="MuiGridList-root-6"
    style="margin: -2px; display: flex; flex-direction: row; flex-wrap: nowrap; transform: translateZ(0); overflow-y: hidden;"
  >
    <div
      style="width: 50%; height: 184px; padding: 2px; display: flex; flex-direction: column; align-items: center;"
    >
      <a
        href="/person/2"
      >
        <div
          class="MuiAvatar-root-7 avatar"
          style="width: 80px; height: 80px; margin: 10px;"
        >
          <img
            alt="personItem"
            class="MuiAvatar-img-9"
            src="http://image.tmdb.org/t/p/w300/undefined"
          />
        </div>
      </a>
      <p
        class="MuiTypography-root-10 MuiTypography-body1-19 MuiTypography-alignCenter-33"
      >
        personItem
      </p>
      <span
        class="MuiTypography-root-10 MuiTypography-caption-20 MuiTypography-alignCenter-33"
      />
    </div>
  </ul>
</div>
`;
